data/all_generated_tests/raw_wast_tests/unreachable_IncorrectConditionEvaluation_1321.wast
;; 2. **Test Description:**    - Define a loop with a `br_if` that should exit the loop, but place `unreachable` immediately after a condition that evaluates to false. Verify that the loop is not exited prematurely.    - Constraint: Verifies the engine handles loop exit conditions correctly.    - Relation to Incorrect Condition Evaluation: Misinterpreted condition might incorrectly take the branch leading to unexpected `unreachable`.

(assert_invalid
  (module (func $test-loop-br_if-after-unreachable
    (loop 
      (if (i32.const 0) (then (unreachable))) 
      (br_if 1 (i32.const 1))
    )
  ))
  "type mismatch"
)